--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,13 +13,18 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.6",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
+    "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.168.0"
   },
   "devDependencies": {
